tests/negative/neg_result_mutated.safe
-- Test: neg_result_mutated
-- Description: Variant field access after mutation within guarded branch.
--   The branch on R.OK establishes the discriminant, but the subsequent
--   assignment to R invalidates it. Accessing R.Value after mutation
--   without re-guarding violates the discriminant-check safety rule.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.12.p148
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.6.p139f
-- Expected: REJECT discriminant_check_not_established

package neg_result_mutated

   subtype error_code is integer (0 to 255);

   type parse_result (ok : boolean = false) is record
      case ok
         when true
            value : integer;
         when false
            error : error_code;

   function try_parse (input : integer) returns parse_result

      if input >= 0
         return (ok = true, value = input);
      else
         return (ok = false, error = 1);

   --  NONCONFORMING: R.OK = True is established by the guard, but
   --  the assignment R = Try_Parse(Other) invalidates the fact.
   --  Accessing R.Value after mutation is rejected.
   function unsafe_after_mutation (first : integer;
                                   second : integer) returns integer
      r : parse_result = try_parse (first);

      if r.ok
         r = try_parse (second);  -- invalidates R.OK = True
         return r.value;          -- REJECTED: R.OK no longer established
      else
         return 0;

